--- a/src/components/HourlyForecast/styles.css
+++ b/src/components/HourlyForecast/styles.css
@@ -1,13 +1,32 @@
 .hourly-forecast-container {
-    max-height: 120px;
-    border: 1px solid salmon;
-    display: flex;
-    overflow-x: auto;
+  max-width: 450px;
+  display: flex;
+  overflow-x: auto;
+  margin: 0 53px;
 }
 
 .hourly-forecast-card {
-   min-width: 110px;
-   height: 200px;
-   line-height: 10px;
-   text-align: center;
+  max-width: 140px;
+  height: 110px;
+  text-align: center;
+}
+
+.time {
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 21.48px;
+  color: #2f2219;
+}
+
+.temperature {
+  font-size: 20px;
+  font-weight: 400;
+  line-height: 21.48px;
+  color: #2f2219;
+}
+
+.temperature-index {
+  vertical-align: top;
+  font-size: 0.6em;
+  line-height: 18px;
 }
