--- a/src/components/RightPanel/styles.css
+++ b/src/components/RightPanel/styles.css
@@ -1,51 +1,49 @@
 .right-panel-container {
-  background-color: #fff;
+  background: #fff;
   border-radius: 0 50px 50px 0;
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
-}
-.search-container {
-  margin-top: 50px;
-  position: relative;
+  height: 100%;
+
+  transition: background-color 250ms;
 }
 
-.search {
-  width: 460px;
-  height: 44px;
-  padding: 10px 20px;
-  border-radius: 30px;
-  border-style: none;
-  background-color: rgba(128, 128, 128, 0.119);
+.right-panel-container-active {
+  height: 100%;
+  background-color: lightgray;
+  animation: changeBackground 0.5s;
+  border-radius: 0 50px 50px 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+
+  transition: background-color 250ms;
 }
 
-input:focus {
-  outline: none;
-}
-
-.search::placeholder {
-  padding-top: 15px;
-  padding-left: 40px;
-  color: #2f2219;
-  opacity: 50%;
-  font-size: 18px;
-  font-weight: 300;
-  line-height: 21.48px;
-}
-
-svg {
-  position: absolute;
-  left: 20px;
-  top: 10px;
+sup {
+  vertical-align: top;
+  font-size: 0.65em;
 }
 
 hr {
   width: 460px;
-  margin: 53px;
+  margin: 30px 53px;
   border: none;
   border-top: 0.5px solid #000;
-  opacity: 50%;
+  opacity: 20%;
+  position: relative;
+}
+
+.hr-active {
+  width: 460px;
+  margin: 30px 53px;
+  border: none;
+  border-top: 0.5px solid #000;
+  opacity: 0;
+  position: relative;
 }
 
 .weather-data {
@@ -86,16 +84,15 @@ hr {
 
 .sunrise-sunset-container {
   display: flex;
-  justify-content:space-between;
-  flex-direction: row;
+  justify-content: center;
+  flex-direction: column;
   align-self: center;
-  margin-top: 20px;
 }
 
 .sunrise-sunset {
   display: grid;
   grid-template-columns: 1fr 1fr;
-  gap: 14px;
+  gap: 30px;
 }
 
 .sunrise,
@@ -107,27 +104,19 @@ hr {
 }
 
 .sunrise-sunset img {
-  width: 50px;
-  height: 30px;
+  width: 90px;
+  height: 45px;
 }
 
 .sunrise-sunset p {
-  font-size: 13.59px;
+  font-size: 20px;
   font-weight: 400;
   line-height: 16.22px;
   color: #2f2219;
+  margin-top: 5px;
 }
 
 .curve {
-  width: 152px;
-  height: 47px;
-}
-
-.hr-second {
-  align-self: flex-start;
-  width: 220px;
-  border: none;
-  border-top: 0.5px solid #000;
-  opacity: 50%;
-  margin: 0 0 0 53px
+  align-self: center;
+  width: 126px;
 }
