add forecast for the next day

--- a/src/components/LeftPanel/styles.css
+++ b/src/components/LeftPanel/styles.css
@@ -32,7 +32,7 @@
   width: 300px;
   display: flex;
   flex-direction: column;
-  justify-content: end;
+  justify-content: flex-end;
   margin-left: 10px;
   margin-bottom: 40px;
 }
@@ -57,7 +57,7 @@ h2 {
   padding: 0;
   overflow-wrap: break-word;
   word-wrap: break-word;
-  hyphens: manual;
+  hyphens: auto;
 }
 
 h5 {
