--- a/src/components/RightPanel/styles.css
+++ b/src/components/RightPanel/styles.css
@@ -57,7 +57,7 @@ hr {
 .right-column {
   display: flex;
   flex-direction: column;
-  justify-content: start;
+  justify-content: flex-start;
   width: 220px;
 }
 
