--- a/src/components/HourlyForecast/styles.css
+++ b/src/components/HourlyForecast/styles.css
@@ -7,7 +7,7 @@
 
 .hourly-forecast-card {
   max-width: 140px;
-  height: 110px;
+  max-height: 110px;
   text-align: center;
 }
 
@@ -29,4 +29,55 @@
   vertical-align: top;
   font-size: 0.6em;
   line-height: 18px;
+}
+
+@media only screen and (max-width: 1200px) {
+  .hourly-forecast-container {
+    width: 380px;
+  }
+  .hourly-forecast-card {
+    max-width: 100px;
+    max-height: 100px;
+    padding: 0 5px;
+  }
+  .time {
+    font-size: 14px;
+    font-weight: 400;
+    color: #2f2219;
+  }
+  .temperature {
+    font-size: 14px;
+    font-weight: 400;
+    color: #2f2219;
+  }
+  .weather-icon {
+    width: 38px;
+    height: 38px;
+  }
+}
+
+@media only screen and (max-width: 850px) {
+  .hourly-forecast-container {
+    width: 320px;
+    margin: 0 20px;
+  }
+  .hourly-forecast-card {
+    max-width: 100px;
+    max-height: 110px;
+    padding: 0 5px;
+  }
+  .time {
+    font-size: 11px;
+    font-weight: 300;
+    color: #2f2219;
+  }
+  .temperature {
+    font-size: 11px;
+    font-weight: 300;
+    color: #2f2219;
+  }
+  .weather-icon {
+    width: 20px;
+    height: 20px;
+  }
 }
