--- a/src/components/LeftPanel/styles.css
+++ b/src/components/LeftPanel/styles.css
@@ -49,7 +49,6 @@ h1 {
   font-size: 44.81px;
   position: absolute;
   top: 40px;
-  
 }
 
 h2 {
@@ -61,6 +60,104 @@ h2 {
 }
 
 h5 {
-  font-size: 28px;
-  font-weight: 300;
+  font-size: 18px;
+  font-weight: 200;
+}
+
+@media only screen and (max-width: 1200px) {
+  .left-panel-container {
+    width: 400px;
+    height: 650px;
+    display: flex;
+    flex-direction: column;
+  }
+
+  .data-container {
+    width: 380px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+  .top-row {
+    display: flex;
+    flex-direction: column;
+  }
+  .top-row-secondary {
+    margin: 0;
+  }
+  .weather-picture {
+    max-width: 200px;
+    max-height: 200px;
+    align-self: flex-end;
+  }
+  h1 {
+    font-size: 80px;
+    font-weight: 400;
+    position: relative;
+    padding: 0;
+  }
+
+  .h1-sup {
+    font-size: 0.2em;
+    font-size: 24.81px;
+    position: absolute;
+    top: 20px;
+  }
+
+  h2 {
+    font-size: 64px;
+    padding: 0;
+    word-break: break-all;
+  }
+
+  h5 {
+    font-size: 38px;
+    font-weight: 300;
+  }
+}
+
+@media only screen and (max-width: 850px) {
+  .left-panel-container {
+    width: 350px;
+    height: 550px;
+  }
+  .data-container {
+    display: flex;
+    flex-direction: column;
+    width: 350px;
+  }
+  .weather-picture {
+    display: none;
+  }
+  h1 {
+    font-size: 80px;
+  }
+  .h1-sup {
+    top: 16px;
+  }
+  h2 {
+    word-break: break-all;
+  }
+}
+
+@media only screen and (max-width: 600px) {
+  .left-panel-container {
+    width: 356px;
+    height: 350px;
+    border-radius: 50px 50px 0 0;
+  }
+  .weather-picture {
+    display: none;
+  }
+  h2 {
+    font-size: 43px;
+    padding: 0;
+    overflow-wrap: break-word;
+    word-wrap: break-word;
+    hyphens: auto;
+  }
+  h5 {
+    font-size: 20px;
+  }
 }
