--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,6 @@
   margin: 0px;
   padding: 0px;
   box-sizing: border-box;
-  
 }
 
 body {
@@ -18,6 +17,28 @@ body {
   height: 744px;
   display: grid;
   grid-template-columns: 1fr 1fr;
-  border: 3px solid #000;
   border-radius: 50px;
+}
+
+@media only screen and (max-width: 1200px) {
+  .container {
+    width: 800px;
+    height: 650px;
+  }
+}
+
+@media only screen and (max-width: 850px) {
+  .container {
+    width: 700px;
+    height: 550px;
+  }
+}
+
+@media only screen and (max-width: 600px) {
+  .container {
+    display: flex;
+    flex-direction: column;
+    width: 356px;
+    height: 700px;
+  }
 }
